--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,8 @@
 
 [defaults]
 inventory = ./hosts-dev
-remote_user = <SSH_USERNAME>
-private_key_file = /path_to/<SSH_KEY>.pem
+remote_user = ec2-user
+private_key_file = /home/gatete/Downloads/ansible.pem
 host_key_checking = False
+host_key_check = False
 retry_files_enabled = False
