--- a/LXD/bootstrap.yaml
+++ b/LXD/bootstrap.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: localhost
   become: yes
   tasks:
     - name: edit host file
@@ -22,3 +22,25 @@
       copy:
         src: /home/ansible/issue
         dest: /etc/issue
+
+
+- hosts: network
+  become: yes
+  tasks:
+     - name: install netcat
+       yum:
+         name: nmap-ncat
+         state: latest
+     - name: create network user
+       user:
+         name: xyzcorp_network
+         state: present
+
+
+-  hosts: sysadmin
+   become: yes
+   tasks:
+     - name: copy tarball
+       copy:
+         src: /home/ansible/scripts.tgz
+         dest: /mnt/storage/
