--- a/LXD/webserver.yml
+++ b/LXD/webserver.yml
@@ -18,3 +18,18 @@
         state: restarted
         enable: yes
       listen: httpd service 
+
+    - name: configure virtual host
+      template:
+        src: /home/ansible/vhost.conf.j2
+        dest: /etc/httpd/conf.d/vhost.conf
+      notify: httpd service
+      tags:
+        - vhost
+    - name: configure site auth
+      template:
+        src: /home/ansible/htpasswd.j2
+        dest: /etc/httpd/conf/htpasswd
+      notify: httpd service
+      tags:
+        - vhost
