--- a/ansible-roles/ansible.cfg
+++ b/ansible-roles/ansible.cfg
@@ -2,8 +2,8 @@
 
 [defaults]
 inventory = ./hosts-dev
-remote_user = ec2-user
-private_key_file = /home/gatete/Downloads/ansible.pem
+remote_user = kato
+private_key_file = ~/.ssh/id_rsa.pub
 host_key_checking = False
 host_key_check = False
 retry_files_enabled = False
