--- a/Basics/ansible.cfg
+++ b/Basics/ansible.cfg
@@ -1,4 +1,10 @@
 
+# ansible.cfg
 
 [defaults]
 inventory = ./hosts-dev
+remote_user = kato
+private_key_file = ~/.ssh/id_rsa.pub
+host_key_checking = False
+host_key_check = False
+retry_files_enabled = False
