--- a/Basics/ansible.cfg
+++ b/Basics/ansible.cfg
@@ -4,7 +4,7 @@
 [defaults]
 inventory = ./hosts-dev
 remote_user = kato
-private_key_file = ~/.ssh/id_rsa.pub
+private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
 host_key_check = False
 retry_files_enabled = False
