--- a/shawn/includestatements.yml
+++ b/shawn/includestatements.yml
@@ -1,18 +1,20 @@
 ---
 - hosts: "apps ldb"
   become: yes
-- name: Install "Debian"
-  apt: name=apache2 state=latest update_cache=yes
-  when: ansible_os_family == "Debian"
+  tasks: 
 
-- name: Install on Centos
-  yum: name=httpd state=latest update_cache=yes
-  when: ansible_os_family == "RedHat"
+   - name: Install "Debian"
+     apt: name=apache2 state=latest update_cache=yes
+     when: ansible_os_family == "Debian"
 
-- name: start debain service 
-  service: name=apache2 enabled=yes state=started
-  when: ansible_os_family == "Debian"
+   - name: Install on Centos
+     yum: name=httpd state=latest update_cache=yes
+     when: ansible_os_family == "RedHat"
 
-- name: start Centos Service 
-  service: name=httpd enabled=yes state=started
-  when: ansible_os_family == "RedHat"
+   - name: start debain service 
+     service: name=apache2 enabled=yes state=started
+     when: ansible_os_family == "Debian"
+
+   - name: start Centos Service 
+     service: name=httpd enabled=yes state=started
+     when: ansible_os_family == "RedHat"
